Fixed : layout was broken in IE9.

--- a/src/scss/02_Layout/01_Outline.scss
+++ b/src/scss/02_Layout/01_Outline.scss
@@ -174,11 +174,14 @@
         /* //_}#can-max-min */
     }
     .lW {
-        /* //_{@ie8,@ie9 */
+        /* //_{#ie89 */
         display   : block;
-        /* //_}@ie8,@ie9 */
+        /* //_}#ie89 */
     }
         .lM, .lS {
+            /* //_{#ie89 */
+            display   : block;
+            /* //_}#ie89 */
             float   : none;
             width   : auto;
         }
